--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="global">
         <div id="login">
-            <img src="../imagem/churrascometro.png" id="icon">
+            <img src="./imagem/churrascometro.png" id="icon">
             <input type="email" placeholder = "Digite seu email" class="inputs" id="inputEmail" >
             <input type="password" placeholder ="Digite sua senha" class="inputs" id="inputSenha">
             <button id="entrar">ENTRAR</button> 
@@ -33,7 +33,7 @@
                 <input type="password" placeholder="Sua senha válida" id="senha">
             </div>
             <button id="registrar">registrar</button>
-            <a href="index.html" id="voltarLogin">Voltar para página de login</a>
+            <a href="./index.html" id="voltarLogin">Voltar para página de login</a>
         </div>
     </div>
     <script src="./scripts/login.js" type="module"></script>
